# LightRAG

./: .gitignore  CHANGELOG.md  Dockerfile  SETUP.md  docker-compose.yml  env.example  pyproject.toml
lightrag/: lightrag.py  logger.py  operate.py  utils.py
lightrag/api/: lightrag_server.py  utils_api.py
lightrag/api/routers/: document_routes.py
lightrag/kg/: faiss_impl.py  json_doc_status_impl.py  json_kv_impl.py  nano_vector_db_impl.py  networkx_impl.py  shared_storage.py
lightrag/llm/: gemini.py  hf.py  jina.py  llama_index_impl.py  ollama.py  openai.py  zhipu.py
lightrag_webui/: package-lock.json  package.json
lightrag_webui/src/: AppRouter.tsx
lightrag_webui/src/stores/: state.ts
